# deep-learning-intro

./: .gitignore  .pre-commit-config.yaml  README.md
micrograd/: computational_graph  graph-after-backprop  graph-before-backprop  graph.py  main.py  node.py  pyproject.toml
spoticore/: pyproject.toml
spoticore/src/spoticore/: !nn.py  bigram.py  bigram_to_nn.py  mlp.py  nn.py  reader.py  spoticore_p1.ipynb  spoticore_p2.ipynb  spoticore_p2_torch.ipynb
