[project]
name = "spoticore"
version = "0.1.0"
description = "character-level bigram model trained on 57,650 lyric samples from spotify"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "ruff>=0.14.7",
    "torch>=2.9.1",
]


[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
commit = [
    "pre-commit>=4.5.0",
]
